<resources>
    <string name="app_name">MinhasReceitas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="favourite">Favourite</string>
    <string name="deliver_it">Find Restaurant!</string>
    <string name="title">Title</string>
    <string name="cuisine">Cuisine</string>
    <string name="instructions">Instructions</string>
    <string name="description">Description</string>
    <string name="need_to_register">Need to Register?</string>
    <string name="reset_password">Reset Password</string>
    <string name="email">Email</string>
    <string name="choose_your_recipe">Choose Your Recipe</string>
    <string name="already_registered">Already Registered?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="what_cuisine_you_looking_for">What cuisine you looking for?</string>
    <string name="american">American</string>
    <string name="chinese">Chinese</string>
    <string name="italian">Italian</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="japanese">Japanese</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="backbutton">backbutton</string>
    <string name="options">options</string>
    <string name="register">Register</string>
    <string name="image">image</string>
    <string name="hamburger">Hamburger</string>
    <string name="my_recipes">My Recipes</string>
    <string name="cooking_done_the_easy_way">Cooking Done The Easy Way</string>
    <string name="log_in">Log In</string>
    <string name="loginframe">loginframe</string>
</resources>