<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".presenter.view.LoginFragment">

    <Button
        android:id="@+id/loginbutton"
        android:layout_height="wrap_content"
        android:layout_width="@dimen/button_width"
        android:layout_marginTop="@dimen/button_margin_from_login_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backgroundloginimage"
        style="@style/OrangeButton"
        />

    <TextView
        android:id="@+id/logintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        app:layout_constraintBottom_toBottomOf="@+id/loginbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginbutton"
        style="@style/TextLogin"
        />

    <TextView
        android:id="@+id/needtoregister"
        style="@style/TextLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/last_item_margin_to_botton"
        android:text="@string/need_to_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/resetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        app:layout_constraintBottom_toTopOf="@+id/needtoregister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton"
        app:layout_constraintVertical_bias="0.543"
        style="@style/TextLogin"
        />

    <TextView
        android:id="@+id/textmyrecipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_title_margin_top"
        android:text="@string/my_recipes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/MainTitle"/>

    <TextView
        android:id="@+id/textsubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sub_title_margin_main_title"
        android:gravity="center"
        android:text="@string/cooking_done_the_easy_way"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textmyrecipes"
        style="@style/SubTitle"
        />

    <ImageView
        android:id="@+id/backgroundloginimage"
        android:layout_width="@dimen/login_fields_frame_width"
        android:layout_height="@dimen/login_fields_frame_height"
        android:layout_marginTop="@dimen/login_frame_margin_from_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textsubtitle"
        app:srcCompat="@drawable/login"
        android:contentDescription="@string/loginframe"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundloginimage"
        app:layout_constraintEnd_toEndOf="@+id/backgroundloginimage"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="@+id/backgroundloginimage"
        style="@style/AuthenticationFields"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@+id/backgroundloginimage"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="@+id/backgroundloginimage"
        app:layout_constraintTop_toTopOf="@+id/backgroundloginimage"
        app:layout_constraintVertical_bias="0.0"
        style="@style/AuthenticationFields"
        />

</androidx.constraintlayout.widget.ConstraintLayout>