<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="219dp"
        android:layout_height="26dp"
        android:fontFamily="@font/hellixregular"
        android:gravity="center"
        android:text="Register"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:layout_marginTop="220dp"
        android:backgroundTint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:elevation="20dp"
        android:fontFamily="@font/hellixregular"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/hellixregular"
        android:text="@string/already_registered"
        android:textColor="@color/white"
        android:textSize="16sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        android:fontFamily="@font/colortube_regular"
        android:text="@string/my_recipes"
        android:textColor="#DCDCC9"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="26dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:srcCompat="@drawable/register_image" />

    <EditText
        android:id="@+id/editTextPasswordValidate"
        android:layout_width="203dp"


        android:layout_height="42dp"
        android:backgroundTint="#00000000"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:fontFamily="@font/hellixregular"


        android:textColorHint="@color/beije"

        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPassword2"
        android:layout_width="203dp"


        android:layout_height="42dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#00000000"
        android:ems="10"
        android:hint="@string/password"
        android:fontFamily="@font/hellixregular"

        android:inputType="textPassword"
        android:textColor="@color/beije"
        android:textSize="16sp"
        android:textColorHint="@color/beije"

        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="204dp"
        android:layout_height="43dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#00000000"
        android:ems="10"
        android:fontFamily="@font/hellixregular"
        android:hint="@string/user_name"
        android:inputType="textEmailAddress"


        android:textColor="@color/white"
        android:textColorHint="@color/beije"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>