<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/textregister"
        android:layout_width="219dp"
        android:layout_height="26dp"
        android:fontFamily="@font/hellixregular"
        android:gravity="center"
        android:text="@string/cooking_done_the_easy_way"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/SubTitle"
        />

    <Button
        android:id="@+id/registerbutton"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:layout_marginTop="220dp"
        android:backgroundTint="#F55A00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textregister"
        style="@style/OrangeButton"
        />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="Register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/registerbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/TextLogin"/>

    <TextView
        android:id="@+id/alreadyregistered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerbutton"
        style="@style/TextLogin"/>

    <TextView
        android:id="@+id/texttitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_title_margin_top"
        android:fontFamily="@font/colortube_regular"
        android:text="@string/my_recipes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/MainTitle"/>
</androidx.constraintlayout.widget.ConstraintLayout>