<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.CuisineFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/japanese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="147dp"
            android:src="@drawable/japanese"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/italian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            android:src="@drawable/italian"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/japanese" />

        <ImageView
            android:id="@+id/vietnamese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="29dp"
            android:src="@drawable/vietnam"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textjapanese" />

        <ImageView
            android:id="@+id/american"
            android:layout_width="158dp"
            android:layout_height="113dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:src="@drawable/american"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textitalian" />

        <ImageView
            android:id="@+id/chinese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:src="@drawable/chinese"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textamerican" />

        <ImageView
            android:id="@+id/backbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/optionsbutton"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:src="@drawable/options"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titlefragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/abrilfatfaceregular"
            android:text="@string/what_cuisine_you_looking_for"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/backbutton"
            app:layout_constraintTop_toBottomOf="@+id/backbutton" />

        <TextView
            android:id="@+id/textamerican"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:fontFamily="@font/hellixregular"
            android:text="@string/american"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/american"
            app:layout_constraintTop_toBottomOf="@+id/american" />

        <TextView
            android:id="@+id/textchinese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/hellixregular"
            android:text="@string/chinese"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/chinese"
            app:layout_constraintTop_toBottomOf="@+id/chinese" />

        <TextView
            android:id="@+id/textitalian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/hellixregular"
            android:text="@string/italian"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/italian"
            app:layout_constraintStart_toStartOf="@+id/italian"
            app:layout_constraintTop_toBottomOf="@+id/italian" />

        <TextView
            android:id="@+id/textvietnamese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="37dp"
            android:layout_marginRight="37dp"
            android:fontFamily="@font/hellixregular"
            android:text="@string/vietnamese"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/vietnamese"
            app:layout_constraintTop_toBottomOf="@+id/vietnamese" />

        <TextView
            android:id="@+id/textjapanese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/hellixregular"
            android:text="@string/japanese"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/japanese"
            app:layout_constraintStart_toStartOf="@+id/japanese"
            app:layout_constraintTop_toBottomOf="@+id/japanese" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
